# fhirschema-rs

./: .dockerignore  .gitattributes  .gitignore  .output-structure.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  VALIDATION_EXAMPLES.md  build.rs  clippy.toml  justfile  rustfmt.toml  test-batch-final-output.ndjson  test-patient.json  test-simple-patient.fhirschema.yaml  test-simple-valid-patient.json  test-structuredefinition.json  test_bincode_fix.rs
.junie/: guidelines.md
adr/: ADR-001-octofhir-fhirschema-implementation.md
benches/: performance_optimizations.rs  schema_validation.rs
crates/fhirschema-cli/: Cargo.toml
crates/fhirschema-cli/src/: main.rs
crates/fhirschema-cli/src/commands/: codegen.rs  completion.rs  convert.rs  download.rs  mod.rs  repository.rs  validate.rs
crates/fhirschema-codegen/: Cargo.toml
crates/fhirschema-codegen/src/: config.rs  error.rs  generator.rs  lib.rs  template.rs  typescript.rs
crates/fhirschema-converter/: Cargo.toml
crates/fhirschema-converter/benches/: conversion_benchmarks.rs
crates/fhirschema-converter/src/: constraint_converter.rs  converter.rs  element_converter.rs  error.rs  lib.rs  progress.rs  reference_resolver.rs  slicing_converter.rs  tests.rs
crates/fhirschema-core/: Cargo.toml
crates/fhirschema-core/src/: binding.rs  constraint.rs  element.rs  error.rs  lib.rs  schema.rs  slicing.rs
crates/fhirschema-repository/: Cargo.toml
crates/fhirschema-repository/src/: config.rs  error.rs  filesystem.rs  lib.rs  memory.rs  repository.rs  resolver.rs  s3.rs  version.rs
crates/fhirschema-server/: Cargo.toml
crates/fhirschema-server/src/: auth.rs  config.rs  error.rs  jobs.rs  lib.rs  metrics.rs  server.rs  storage.rs
crates/fhirschema-server/src/middleware/: auth.rs  rate_limit.rs
crates/fhirschema-server/src/routes/: conversion.rs  health.rs  ig.rs  info.rs  jobs.rs  metrics.rs  mod.rs  schemas.rs  validation.rs
crates/fhirschema-server/src/services/: app_state.rs  conversion.rs  ig_registry.rs  job_manager.rs  mod.rs  storage.rs  validation.rs
crates/fhirschema-validator/: Cargo.toml
crates/fhirschema-validator/src/: constraint.rs  context.rs  element.rs  error.rs  lib.rs  primitive.rs  schemata.rs  slicing.rs  validator.rs
docs/: TROUBLESHOOTING.md  USAGE.md  VALIDATION_LAB.md  bridge-implementation.md
examples/: README.md  advanced_type_system_demo.rs  basic-patient.fhirschema.json  choice-types.fhirschema.json  choice-types.fhirschema.yaml  composite_provider_usage.rs  diagnose_schema_issue.rs  embedded_provider_usage.rs  enhanced_provider_demo.rs  fix_schema_generation.rs  inspect_precompiled_schemas.rs  integration_with_fhir_libraries.rs  list_available_schemas.rs  model_provider_trait_demo.rs  patient-with-choice-types.json  patient-with-constraints.json  patient-with-references.json  simple-patient-structuredefinition.json  simple_trait_test.rs  test-patient.fhirschema.json  test_property_validation.rs  test_validation_fix.rs
octofhir-fhirschema/: Cargo.toml  README.md
octofhir-fhirschema-devtools/: Cargo.toml
octofhir-fhirschema-devtools/fixtures/rh_us_core/: complex_patient.json  simple_patient.json
octofhir-fhirschema-devtools/src/: main.rs  official_fhir_runner.rs  validation_lab.rs
octofhir-fhirschema-tests/: Cargo.toml
octofhir-fhirschema-tests/src/: lib.rs  mock_evaluator.rs
octofhir-fhirschema-tests/tests/: fhirpath_constraint_tests.rs
octofhir-fhirschema/benches/: validation_bench.rs
octofhir-fhirschema/precompiled_schemas/: r4_schemas.json  r4b_schemas.json  r5_schemas.json  r6_schemas.json
octofhir-fhirschema/scripts/: generate-ts.mjs  profile.sh
octofhir-fhirschema/src/: action_calculator.rs  choice_handler.rs  converter.rs  element_transformer.rs  embedded.rs  error.rs  lib.rs  model_provider.rs  path_parser.rs  reference.rs  stack_processor.rs  terminology.rs  test_task_backbone.rs  types.rs  validation.rs  validation_provider.rs  validator.rs
octofhir-fhirschema/src/provider/: builder.rs  mod.rs  model_provider.rs  validation_provider.rs
octofhir-fhirschema/src/types/: mod.rs  schema.rs  structure_definition.rs  validation.rs
octofhir-fhirschema/src/validation/: compiled.rs  compiler.rs  mod.rs  questionnaire.rs
octofhir-fhirschema/tests/: fhir_official_tests.rs  field_by_field_test.rs  fixture_validation_tests.rs  minimal_schema_test.rs  model_provider_tests.rs  model_provider_validation_tests.rs  profile_validation_tests.rs  property_based_tests.rs  r4b_conversion_verification.rs  r4b_specific_tests.rs  schema_comparison.rs  slicing_tests.rs  target_profile_tests.rs  test_bincode_roundtrip.rs  thread_safety_test.rs
octofhir-fhirschema/tests/common/: mod.rs
octofhir-fhirschema/tests/fixtures/: .gitignore  README.md
octofhir-fhirschema/tests/fixtures/r4/base/invalid/: observation_missing_required.json  patient_array_expected.json  patient_unknown_element.json  patient_wrong_type.json
octofhir-fhirschema/tests/fixtures/r4/base/valid/: encounter_simple.json  observation_simple.json
octofhir-fhirschema/tests/fixtures/r4/constraints/: patient_with_identifier.json
octofhir-fhirschema/tests/fixtures/r4/profiles/: required_gender_patient.json  us_core_patient_example.json
octofhir-fhirschema/tests/fixtures/r4/slicing/: bundle_with_entries.json
precompiled_schemas/: README.md
r4-core-schemas/: schemas.ndjson
scripts/: build_precompiled_schemas.sh  generate_precompiled_schemas.rs
spec/: README.md  converter-algorithm.md  converter-specification.md  fhirschema-specification.md  validation-algorithm.md
src/: error.rs  lib.rs
tasks/: README.md  phase-1-core-foundation.md  phase-2-validation-engine.md  phase-3-repository-management.md  phase-4-code-generation.md  phase-5-server-services.md
test-debug/: schemas.ndjson
tests/: advanced_type_system_tests.rs  choice_type_tests.rs  converter_tests.rs  debug_patient_schema.rs  element_tests.rs  embedded_provider_type_resolution_tests.rs  fhir_r4_canonical_manager_test.rs  golden_converter_tests.rs  memory_optimization_test.rs  (+10 more)
(+118 files in other folders)
