[package]
name = "octofhir-fhirschema"
version = "0.2.6"
edition = "2024"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
description = "A high-performance FHIR schema management and validation library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/octofhir/fhirschema-rs"
keywords = ["fhir", "healthcare", "schema", "validation", "interoperability"]
categories = ["api-bindings", "data-structures", "parser-implementations"]

[features]
default = ["tokio", "bincode"]
cli = ["clap", "tokio"]
disk-storage = ["tokio/fs"]
server = ["axum", "tokio", "tracing"]
bincode = []
all = ["cli", "disk-storage", "server", "bincode"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities for concurrent streams
futures = "0.3"

# Error handling
thiserror = "2"
async-trait = "0.1"

# Memory storage (always available)
papaya = { version = "0.2.3" }
lru = { version = "0.16" }

# CLI dependencies
clap = { version = "4", features = ["derive"], optional = true }

# Async runtime
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
], optional = true }

# Server dependencies
axum = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }

# Validation
regex = "1.10"
url = { version = "2.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# OctoFHIR ecosystem - Official canonical manager (using local version with fix)
octofhir-canonical-manager = { version = "0.1.6" }

# FhirPathEngine trait for constraint evaluation (avoiding circular dependencies)
octofhir-fhir-model = { version = "0.1.2", features = ["serde"] }

lz4_flex = "0.11"
bincode = "2"

rayon = "1.11"
crossbeam-channel = "0.5"
num_cpus = "1.16"

[dev-dependencies]
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "test-util",
] }
tokio-test = "0.4"
criterion = "0.7"
tempfile = "3.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
zip = "4.6.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

[[bench]]
name = "schema_validation"
harness = false

[[bench]]
name = "performance_optimizations"
harness = false

[lib]
name = "octofhir_fhirschema"
path = "src/lib.rs"

[[bin]]
name = "octofhir-fhirschema"
path = "src/bin/cli.rs"
required-features = ["cli"]
