[package]
name = "octofhir-fhirschema"
version = "0.3.0"
edition = "2024"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
description = "A high-performance async-first FHIR schema management and validation library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/octofhir/fhirschema-rs"
keywords = ["fhir", "healthcare", "schema", "validation", "interoperability"]
categories = ["api-bindings", "data-structures", "parser-implementations"]

[features]
default = ["memory-storage", "lru-cache", "embedded-providers", "tracing"]
memory-storage = []
disk-storage = ["tokio/fs"]
lru-cache = ["lru"]
compression = ["lz4_flex", "zstd"]
full-validation = []
performance-metrics = ["metrics"]
embedded-providers = ["bincode"]
dynamic-caching = ["tokio/fs", "bincode"]
precompiled-schemas = ["embedded-providers"]
tracing = []

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (always required for async-first design)
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }

# Async utilities for concurrent streams
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2"

# Memory storage and caching
papaya = { version = "0.2.3" }
lru = { version = "0.16", optional = true }

# Optional compression support
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }

# Optional performance metrics and logging
metrics = { version = "0.24", optional = true }
tracing = "0.1"

# Validation
regex = "1.10"
url = { version = "2.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

# OctoFHIR ecosystem integration
octofhir-canonical-manager = { version = "0.1.7" }
octofhir-fhir-model = { path = "../fhir-model-rs", features = ["serde"] }

# Concurrency and performance
num_cpus = "1.16"

# Serialization for efficient storage (optional)
bincode = { version = "2", optional = true }

# Directory creation for caching
dirs = "6.0"

# CLI support for schema builder
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "test-util",
] }
tokio-test = "0.4"
criterion = "0.7"
tempfile = "3.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
zip = "5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

[lib]
name = "octofhir_fhirschema"
path = "src/lib.rs"

[[bin]]
name = "schema-builder"
path = "src/bin/schema_builder.rs"

# Include precompiled schema binaries in the library package
[package.metadata]
docs.rs.features = ["embedded-providers", "precompiled-schemas"]

# Ensure precompiled schemas are included in the package, but exclude schema-builder binary
include = [
    "src/lib.rs",
    "src/core/**/*",
    "src/provider/**/*",
    "src/storage/**/*",
    "src/types/**/*",
    "src/utils/**/*",
    "src/error.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "precompiled_schemas/*.bin",
]
