[workspace]
resolver = "3"
members = ["octofhir-fhirschema", "octofhir-fhirschema-devtools", "octofhir-fhirschema-tests"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
regex = "1.12"
url = { version = "2.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
