[package]
name = "octofhir-fhirschema-devtools"
version = "0.1.0"
edition = "2024"
authors = ["OctoFHIR Team<funyloony@gmail.com>"]
description = "Development tools for FHIR schema generation"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
octofhir-fhirschema = { path = "../octofhir-fhirschema" }
octofhir-canonical-manager = { version = "0.1.20", features = ["cli"]}
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "schema-generator"
path = "src/main.rs"
