[package]
name = "octofhir-fhirschema-devtools"
version = "0.1.0"
edition = "2024"
authors = ["OctoFHIR Team<funyloony@gmail.com>"]
description = "Development tools for FHIR schema generation"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
octofhir-fhirschema = { path = "../octofhir-fhirschema" }
octofhir-canonical-manager = { version = "0.2.1", features = ["cli"]}
octofhir-fhir-model = { version = "0.1.13", features = ["caching", "http-client"] }
octofhir-fhirpath = "0.4.48"
anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wait-timeout = "0.2"
zip = "8.6"

[[bin]]
name = "schema-generator"
path = "src/main.rs"

[[bin]]
name = "validation-lab"
path = "src/validation_lab.rs"

[[bin]]
name = "official-fhir-runner"
path = "src/official_fhir_runner.rs"
