[package]
name = "octofhir-fhirschema-tests"
version = "0.1.0"
edition = "2021"
publish = false  # Test-only crate, not published

[dependencies]
# CRITICAL: This crate can depend on BOTH fhirschema and fhirpath
# This avoids cycle dependencies in the main library
octofhir-fhirschema = { path = "../octofhir-fhirschema" }
octofhir-fhirpath = { version = "0.4" }
octofhir-fhir-model = { version = "0.1.6" }

# Testing utilities
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
