[package]
name = "octofhir-fhirschema"
version = "0.3.5"
edition = "2024"
authors = ["OctoFHIR Team<funyloony@gmail.com>"]
description = "FHIR schema conversion and validation library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/octofhir/fhirschema-rs"
keywords = ["fhir", "healthcare", "schema", "validation"]
include = ["src/**/*", "precompiled_schemas/**/*", "Cargo.toml", "README.md", "LICENSE*"]
categories = ["science"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
once_cell = "1.19"
async-trait = "0.1"

# FHIR dependencies
octofhir-fhir-model = { version = "0.1.6"}
octofhir-canonical-manager = { version = "0.1.13" }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
