[package]
name = "octofhir-fhirschema"
version = "0.3.14"
edition = "2024"
authors = ["OctoFHIR Team<funyloony@gmail.com>"]
description = "FHIR schema conversion and validation library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/octofhir/fhirschema-rs"
keywords = ["fhir", "healthcare", "schema", "validation"]
include = ["src/**/*", "precompiled_schemas/**/*", "Cargo.toml", "README.md", "LICENSE*"]
categories = ["science"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
once_cell = "1.19"
async-trait = "0.1"
async-recursion = "1.0"
moka = { version = "0.12", features = ["future"] }
futures = "0.3"

# FHIR dependencies
octofhir-fhir-model = { version = "0.1.8", features = ["caching", "http-client"] }
octofhir-canonical-manager = { version = "0.1.24", features = ["cli"]}

[dev-dependencies]
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
futures = "0.3"
tempfile = "3.0"
octofhir-canonical-manager = { version = "0.1.26", features = ["cli"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
proptest = "1.4"
rand = "0.9"
criterion = { version = "0.8", features = ["async_tokio"] }

[[bench]]
name = "validation_bench"
harness = false

[profile.bench]
debug = true 
