[package]
name = "fhirschema-cli"
description = "Command-line interface for FHIRSchema tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "fhirschema"
path = "src/main.rs"

[dependencies]
human-panic = "2.0.3"
# Core FHIRSchema crates
fhirschema-core = { path = "../fhirschema-core" }
fhirschema-converter = { path = "../fhirschema-converter", optional = true }
fhirschema-validator = { path = "../fhirschema-validator", optional = true }

# CLI framework
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP client for downloading from registries
reqwest = { version = "0.11", features = ["json"] }

# Archive extraction for FHIR packages
tar = "0.4"
flate2 = "1.0"

# Date/time handling for metadata
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
proptest.workspace = true

[features]
default = ["converter", "validator"]
# Enable conversion functionality
converter = ["fhirschema-converter"]
# Enable validation functionality
validator = ["fhirschema-validator"]
# Enable remote fetching capabilities
remote = ["fhirschema-converter/remote"]
