[package]
name = "fhirschema-converter"
description = "Convert FHIR StructureDefinition to FHIRSchema format"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core FHIRSchema types
fhirschema-core = { path = "../fhirschema-core" }
fhirschema-repository = { path = "../fhirschema-repository", optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# HTTP client for fetching remote StructureDefinitions
reqwest = { workspace = true, optional = true }

# Logging
tracing.workspace = true

# Regular expressions for FHIRPath validation
regex.workspace = true

[dev-dependencies]
# Testing
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "conversion_benchmarks"
harness = false

[features]
default = []
# Enable remote StructureDefinition fetching
remote = ["reqwest"]
# Enable differential mode processing
differential = []
# Enable repository integration
repository = ["fhirschema-repository"]
