[package]
name = "fhirschema-server"
version = "0.1.0"
edition = "2021"
description = "HTTP server for FHIRSchema services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/octofhir/fhirschema"
keywords = ["fhir", "schema", "validation", "server", "http"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
# Async runtime and HTTP server
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "compression-gzip", "timeout"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive", "env"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security and authentication
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"

# Rate limiting and middleware
governor = "0.6"

# Caching
moka = { version = "0.12", features = ["future"] }

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# S3-compatible storage
aws-sdk-s3 = "1.0"
aws-config = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics
prometheus = "0.13"

# WebSocket support
tokio-tungstenite = "0.21"

# HTTP client for IG registry integration
reqwest = { version = "0.11", features = ["json", "stream"] }

# Local dependencies
fhirschema-core = { path = "../fhirschema-core" }
fhirschema-validator = { path = "../fhirschema-validator" }
fhirschema-converter = { path = "../fhirschema-converter" }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14.0"
